--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -3,65 +3,79 @@
 <html lang="en-AU">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shannon's Salmon Recipe</title>
     <link rel="icon" type="image"/png href="images/cartoon-salmon.png">
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
-    <div class="navigation"><a href="../index.html">Home</a></div>
-    <div class="navigation"><a href="#">About</a></div>
-    <div class="navigation"><a href="#">Recipes</a></div>
-    <div class="navigation"><a href="#">Media</a></div>
+  <div class="navigation">
+    <div class="navigation list"><a href="../index.html">Home</a></div>
+    <div class="navigation list"><a href="#">About</a></div>
+    <div class="navigation list"><a href="#">Recipes</a></div>
+    <div class="navigation list"><a href="#">Media</a></div>
   </div>
 
   <body>
-    <h1>Air Fryer Miso-Glazed Salmon</h1>
+    <div class="text-area">
+      <h1>Air Fryer Miso-Glazed Salmon</h1>
 
-    <img
-      src="images/salmon.png"
-      alt="Image of salmon dish"
-      width="100"
-      height="100"
-      id="salmon-image"
-    />
+      <h2>Description</h2>
 
-    <h2>Description</h2>
-    <p>
-      This recipe was inspired by the food blogger TiffyCooks! It is super
-      quick, easy and delicious, and if you're a novice cook like me, this
-      recipe is perfect for you!
-    </p>
-    <p>
-      Prep time: 30 minutes <br />
-      Cooking time: 25 minutes
-    </p>
+      <div class="flex-container" class="description">
+        <div class="flex-item">
+          <p>
+            This recipe was inspired by the food blogger TiffyCooks! It is super
+            quick, easy and delicious, and if you're a novice cook like me, this
+            recipe is perfect for you!
+          </p>
+        </div>
 
-    <h2>Ingredients</h2>
-    <ul>
-      <li>2 pieces skin-on salmon</li>
-      <li>3 tbsp Japanese mayo</li>
-      <li>1.5 tbsp white miso paste</li>
-      <li>1 tbsp minced garlic paste</li>
-      <li>1 tbsp mirin</li>
-      <li>1 tbsp soy sauce</li>
-      <li>Pinch of black pepper</li>
-    </ul>
+        <div class="flex-item">
+          <img
+            src="images/salmon.png"
+            alt="Image of salmon dish"
+            width="100"
+            height="100"
+            id="salmon-image"
+          />
+        </div>
 
-    <h2>Instructions</h2>
-    <ol>
-      <li>Combine all the marinade ingredients listed above.</li>
-      <li>
-        Place the salmon skin-side down in a bowl/container and coat the salmon
-        with the marinade.
-      </li>
-      <li>Marinate the salmon for at least 30 minutes (ideally overnight).</li>
-      <li>Place the salmon skin-side down in the air fryer.</li>
-      <li>Air fry at 205<sup>o</sup>C for 20 minutes.</li>
-    </ol>
+        <div class="flex-item">
+          <p>
+            Prep time: 30 minutes <br />
+            Cooking time: 25 minutes
+          </p>
+        </div>
+      </div>
 
-    <h3>Comments, feedback or recipe suggestions!</h3>
-    <textarea rows="10" cols="30">Enter text here</textarea>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>2 pieces skin-on salmon</li>
+        <li>3 tbsp Japanese mayo</li>
+        <li>1.5 tbsp white miso paste</li>
+        <li>1 tbsp minced garlic paste</li>
+        <li>1 tbsp mirin</li>
+        <li>1 tbsp soy sauce</li>
+        <li>Pinch of black pepper</li>
+      </ul>
 
+      <h2>Instructions</h2>
+      <ol>
+        <li>Combine all the marinade ingredients listed above.</li>
+        <li>
+          Place the salmon skin-side down in a bowl/container and coat the
+          salmon with the marinade.
+        </li>
+        <li>
+          Marinate the salmon for at least 30 minutes (ideally overnight).
+        </li>
+        <li>Place the salmon skin-side down in the air fryer.</li>
+        <li>Air fry at 205<sup>o</sup>C for 20 minutes.</li>
+      </ol>
+
+      <h3>Comments, feedback or recipe suggestions!</h3>
+      <textarea rows="10" cols="30">Enter text here</textarea>
+    </div>
   </body>
-
 </html>
