--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en-AU">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
   </head>
 
