--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -18,36 +18,28 @@
 
   <body>
     <div class="text-area">
-      <h1>Air Fryer Miso-Glazed Salmon</h1>
+      <h1><i>Air Fryer Miso-Glazed Salmon</i></h1>
+
+      <img
+        src="images/miso-salmon.jpg"
+        alt="Image of salmon dish"
+        width="100"
+        height="100"
+        id="salmon-image"
+      />
 
       <h2>Description</h2>
 
-      <div class="flex-container" class="description">
-        <div class="flex-item">
-          <p>
-            This recipe was inspired by the food blogger TiffyCooks! It is super
-            quick, easy and delicious, and if you're a novice cook like me, this
-            recipe is perfect for you!
-          </p>
-        </div>
+      <p>
+        This recipe was inspired by the food blogger TiffyCooks! It is quick,
+        easy and delicious, and if you're a novice cook like me, this recipe is
+        perfect for you!
+      </p>
 
-        <div class="flex-item">
-          <img
-            src="images/salmon.png"
-            alt="Image of salmon dish"
-            width="100"
-            height="100"
-            id="salmon-image"
-          />
-        </div>
-
-        <div class="flex-item">
-          <p>
-            Prep time: 30 minutes <br />
-            Cooking time: 25 minutes
-          </p>
-        </div>
-      </div>
+      <p>
+        <b>Prep time:</b> 30 minutes <br />
+        <b>Cooking time</b>: 25 minutes
+      </p>
 
       <h2>Ingredients</h2>
       <ul>
@@ -72,6 +64,10 @@
         </li>
         <li>Place the salmon skin-side down in the air fryer.</li>
         <li>Air fry at 205<sup>o</sup>C for 20 minutes.</li>
+        <li>
+          Serve over a bed of rice with some steamed bok choy and you have
+          yourself a delicious meal!
+        </li>
       </ol>
 
       <h3>Comments, feedback or recipe suggestions!</h3>
