--- a/recipes/salmon.html
+++ b/recipes/salmon.html
@@ -10,10 +10,10 @@
   </head>
 
   <div class="navigation">
-    <div class="navigation list"><a href="../index.html">Home</a></div>
-    <div class="navigation list"><a href="#">About</a></div>
-    <div class="navigation list"><a href="#">Recipes</a></div>
-    <div class="navigation list"><a href="#">Media</a></div>
+    <div class="navigation-list"><a href="../index.html">Home</a></div>
+    <div class="navigation-list"><a href="#">About</a></div>
+    <div class="navigation-list"><a href="#">Recipes</a></div>
+    <div class="navigation-list"><a href="#">Media</a></div>
   </div>
 
   <body>
@@ -40,35 +40,40 @@
         <b>Prep time:</b> 30 minutes <br />
         <b>Cooking time</b>: 25 minutes
       </p>
+      <div class="flex-container">
+        <div class="flex-item-ingredients">
+          <h2>Ingredients</h2>
+          <ul>
+            <li>2 pieces skin-on salmon</li>
+            <li>3 tbsp Japanese mayo</li>
+            <li>1.5 tbsp white miso paste</li>
+            <li>1 tbsp minced garlic paste</li>
+            <li>1 tbsp mirin</li>
+            <li>1 tbsp soy sauce</li>
+            <li>Pinch of black pepper</li>
+          </ul>
+        </div>
 
-      <h2>Ingredients</h2>
-      <ul>
-        <li>2 pieces skin-on salmon</li>
-        <li>3 tbsp Japanese mayo</li>
-        <li>1.5 tbsp white miso paste</li>
-        <li>1 tbsp minced garlic paste</li>
-        <li>1 tbsp mirin</li>
-        <li>1 tbsp soy sauce</li>
-        <li>Pinch of black pepper</li>
-      </ul>
-
-      <h2>Instructions</h2>
-      <ol>
-        <li>Combine all the marinade ingredients listed above.</li>
-        <li>
-          Place the salmon skin-side down in a bowl/container and coat the
-          salmon with the marinade.
-        </li>
-        <li>
-          Marinate the salmon for at least 30 minutes (ideally overnight).
-        </li>
-        <li>Place the salmon skin-side down in the air fryer.</li>
-        <li>Air fry at 205<sup>o</sup>C for 20 minutes.</li>
-        <li>
-          Serve over a bed of rice with some steamed bok choy and you have
-          yourself a delicious meal!
-        </li>
-      </ol>
+        <div class="flex-item-instructions">
+          <h2>Instructions</h2>
+          <ol>
+            <li>Combine all the marinade ingredients listed above.</li>
+            <li>
+              Place the salmon skin-side down in a bowl/container and coat the
+              salmon with the marinade.
+            </li>
+            <li>
+              Marinate the salmon for at least 30 minutes (ideally overnight).
+            </li>
+            <li>Place the salmon skin-side down in the air fryer.</li>
+            <li>Air fry at 205<sup>o</sup>C for 20 minutes.</li>
+            <li>
+              Serve over a bed of rice with veges of your choice and you have
+              yourself a delicious meal!
+            </li>
+          </ol>
+        </div>
+      </div>
 
       <h3>Comments, feedback or recipe suggestions!</h3>
       <textarea rows="10" cols="30">Enter text here</textarea>
